--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    // "paths": { "@angular/*": [ "../node_modules/@angular/*" ] }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
